# chrome-ec

./: .gitignore  CMakeLists.txt  Kconfig  Makefile  Makefile.toolchain  PRESUBMIT.cfg  firmware_builder.py  pylintrc
bazel/: all_targets.generated.bzl  deps.bzl
cmake/: toolchain-common.cmake
common/: build.mk  cbi.c  cbi_common.c  charge_manager.c  charge_state.c  fan.c  firmware_image.lds.S  fmap.c  i2c_controller.c  i2c_controller_cros_ec.c  keyboard_scan.c  main.c  mkbp_input_devices.c  motion_sense.c  panic_log.c  panic_output.c  peripheral.c  preserved_ring_buf.c  rwsig.c  tablet_mode.c  timer.c  uart_printf.c  usb_common.c  usb_pd_dual_role.c  usb_pd_protocol.c  usbc_utils.c
cts/: cts.py
zephyr/program/ec-aic/: BUILD.py  CMakeLists.txt  Kconfig  README.md  program.conf
zephyr/program/ec-aic/ite-aic/: binman.dtsi  project.conf  project.overlay
zephyr/program/ec-aic/npcx-aic/: project.conf  project.overlay
zephyr/program/fatcat/: BUILD.py  CMakeLists.txt  Kconfig  program.conf
zephyr/program/fatcat/fatcat_it82002aw/: CMakeLists.txt  adc.dtsi  fan.dtsi  generated.dtsi  gpios.dtsi  i2c.dtsi  interrupts.dtsi  keyboard.dtsi  project.conf  project.overlay  temp_sensors.dtsi
zephyr/program/fatcat/fatcat_it82002aw/include/: board.h
zephyr/program/fatcat/fatcat_it82002aw/src/: hibernate.c
zephyr/program/fatcat/fatcat_npcx9m7f/: CMakeLists.txt  fan.dtsi  generated.dtsi  gpios.dtsi  i2c.dtsi  project.conf  project.overlay
zephyr/program/fatcat/felino/: CMakeLists.txt  adc.dtsi  fan.dtsi  gpios.dtsi  interrupts.dtsi  keyboard.dtsi  led_pins.dtsi  led_policy.dtsi  power_signals.dtsi  project.conf  project.overlay  temp_sensors.dtsi  usb_typec.dtsi
zephyr/program/fatcat/felino/include/: board.h  keyboard_customization.h
zephyr/program/fatcat/felino/src/: board.c  board_power.c  keyboard_customization.c
zephyr/program/fatcat/francka/: CMakeLists.txt  gpios.dtsi  i2c.dtsi  keyboard.dtsi  led_pins.dtsi  led_policy.dtsi  motionsense.dtsi  overlay.dtsi  project.conf  thermal.dtsi  usbc.dtsi
zephyr/program/fatcat/francka/include/: keyboard_customization.h
zephyr/program/fatcat/francka/src/: keyboard_customization.c  touch_panel.c  usbc_runtime.c
zephyr/program/fatcat/kinmen/: adc.dtsi  binman.dtsi  console.dtsi  fan.dtsi  gpios.dtsi  i2c.dtsi  interrupts.dtsi  power_signals.dtsi  project.conf  project.overlay  pwm.dtsi  usb_typec.dtsi  usba.dtsi
zephyr/program/fatcat/kinmen/include/: board.h
zephyr/program/fatcat/kinmen/src/: board_power.c  hibernate.c
zephyr/program/ocelot/: BUILD.py  CMakeLists.txt  Kconfig  ocelot_stub.dtsi  program.conf
zephyr/program/ocelot/ocelot_ite/: generated.dtsi  project.conf  project.overlay
zephyr/program/ocelot/ocelot_microchip/: gpio.dtsi  project.conf  project.overlay
zephyr/program/ocelot/ocelot_nuvoton/: generated.dtsi  i2c.dtsi  project.conf  project.overlay
zephyr/program/skywalker/: BUILD.py  CMakeLists.txt  Kconfig  interrupts.dtsi  ite_common.dtsi  ite_generated.dtsi  ite_keyboard.dtsi  ite_overlay.dtsi  ite_program.conf  ite_usbc.dtsi  npcx_common.dtsi  npcx_default_gpio_pinctrl.dtsi  npcx_generated.dtsi  npcx_keyboard.dtsi  npcx_overlay.dtsi  npcx_usbc.dtsi  power_signal.dtsi  program.conf  usba.dtsi
zephyr/program/skywalker/luuke/: CMakeLists.txt  led_pins.dtsi  project.conf  project.overlay
zephyr/program/skywalker/obiwan/: CMakeLists.txt  led_pins.dtsi  obiwan_vif.xml  project.conf  project.overlay
zephyr/program/skywalker/obiwan/include/: keyboard_customization.h
zephyr/program/skywalker/skywalker/: CMakeLists.txt  led_pins.dtsi  led_policy.dtsi  motionsense.dtsi  project.conf  project.overlay  skywalker_vif.xml
zephyr/program/skywalker/skywalker/src/: sensor.c
zephyr/program/skywalker/src/: backlight.c  dp_alt_mode.c  hibernate.c  hooks.c  i2c.c
zephyr/test/charger/: CMakeLists.txt  Kconfig  prj.conf  testcase.yaml
zephyr/test/charger/boards/: charger.gothrax.overlay  native_sim.overlay
zephyr/test/charger/charge/: CMakeLists.txt
zephyr/test/charger/charge/src/: charge_manager.c  charge_ramp.c  charge_state_prevent_power_on.c
zephyr/test/charger/isl923x/src/: extpower.c
zephyr/test/charger/src/: main.c  mocks.c
(+1102 files in other folders)
